--- a/src/Components/Home/Solsecond/solsecond.css
+++ b/src/Components/Home/Solsecond/solsecond.css
@@ -21,7 +21,7 @@
     font-family: NexaLight;
     text-transform: capitalize;
     font-size: 70px;
-    padding: 0 20rem 0 25rem;
+    text-align: center;
 }
 
 #solsecond_Fspan {
