--- a/src/Components/Home/Portfolio/portfolio.css
+++ b/src/Components/Home/Portfolio/portfolio.css
@@ -28,7 +28,7 @@
 
 .portfolio_menu {
     display: flex;
-    gap: 50px;
+    gap: 30px;
     width: 100%;
     /* height: 100%;
     width: 400%;
@@ -45,12 +45,13 @@
     width: 200%;
     display: flex;
     flex-wrap: nowrap;
+ 
 
 }
 
-.portfolio_leftside {
-    background: #003DF4;
-    position: relative;
+
+.portfolio_leftside_img img{
+    height: 80vh;
 }
 
 .portfolio_rightside {
@@ -60,9 +61,9 @@
 
 .portfolio_leftside,
 .portfolio_rightside {
-    padding: 33px 0 0 103px;
+    /* padding: 33px 0 0 103px; */
     width: 100%;
-    height: 100vh;
+    height: 80vh;
 }
 
 .portfolio_leftside_fristheading {
