--- a/src/Components/Home/Portfolio/portfolio.css
+++ b/src/Components/Home/Portfolio/portfolio.css
@@ -6,7 +6,7 @@
 }
 
 .portfolio_header {
-    padding: 3.5rem 0;
+    padding: 2.5rem 0;
     text-align: center;
 }
 
@@ -14,8 +14,8 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 800;
-    font-size: 100px;
-    line-height: 150px;
+    font-size: 80px;
+    line-height: 100px;
     color: var(--Primary);
 }
 
@@ -24,12 +24,14 @@
     font-size: 25px;
     line-height: 70px;
     padding-top: 13px;
+    color: #3F3F3F;
+    font-weight: 400;
 }
 
 .portfolio_menu {
     display: flex;
     gap: 30px;
-    width: 100%;
+    /* width: 100%; */
     /* height: 100%;
     width: 400%;
     overscroll-behavior: none;
@@ -45,19 +47,17 @@
     width: 200%;
     display: flex;
     flex-wrap: nowrap;
- 
+
 
 }
 
 
-.portfolio_leftside_img img{
-    height: 80vh;
+.portfolio_leftside_img img {
+    height: 65vh;
+    cursor: pointer;
 }
 
-.portfolio_rightside {
-    background: #FB7161;
-    position: relative;
-}
+
 
 .portfolio_leftside,
 .portfolio_rightside {
@@ -174,20 +174,28 @@
 }
 
 
-/* .fristline{
-    width: 1px;
-    height: 35px;
-    opacity: 0.7;
-    background-color: #FFFFFF;
-    position: relative;
-    left: 18rem;
+@media (min-width:700px) and (max-width:1000px) {
+
+    .portfolio_leftside_img img {
+        height: 50vh;
+        cursor: pointer;
+        
+    }
+    
+
+
 }
 
-.lastline {
-    width: 1px;
-    height: 35px;
-    opacity: 0.7;
-    background-color: #FFFFFF;
-    position: relative;
-    left: 33rem;
+
+/* @media (min-width:400px) and (max-width:700px) {
+
+    .portfolio_leftside_img img {
+        height: 50vh;
+        cursor: pointer;
+       
+    }
+    
+
+
 } */
+
