--- a/src/Components/Home/Testimonials/testimonial.css
+++ b/src/Components/Home/Testimonials/testimonial.css
@@ -2,6 +2,8 @@
     display: flex;
 }
 
+
+
 .starandh4{
   
     display: flex;
@@ -23,6 +25,14 @@
     font-family: NexaLight;
     font-size: 18px;
     color: var(--textBlack2);
+}
+
+.qotimg{
+    transform: translate(-19px ,40px);
+}
+
+.qotimg2{
+    transform: translateY(39px);
 }
 
 .testimonial_stars {
@@ -56,7 +66,7 @@
 }
 
 .testimonial_icons {
-    padding-top: 2.7rem;
+    padding-top: 7rem;
     text-align: center;
     font-size: 50px;
     color: var(--textBlack2);
@@ -101,6 +111,16 @@
         font-size: 30px;
         padding-bottom: 13rem;
     }
+
+    .qotimg{
+        transform: translate(-280px ,120px);
+        margin-bottom: 60px;
+    }
+    
+    .qotimg2{
+        transform: translateY(39px);
+    }
+
 }
 
 @media (min-width:481px) and (max-width:641px) {
@@ -115,6 +135,8 @@
     .testimonial_icons {
         font-size: 38px;
     }
+
+    
 }
 
 @media (min-width:641px) and (max-width:961px) {
@@ -146,6 +168,18 @@
         height: 260px;
         pointer-events: none;
     }
+
+    .qotimg{
+        transform: translate(-250px ,90px);
+        margin-bottom: 25px;
+    }
+    
+    .qotimg2{
+        transform: translateY(39px);
+    }
+
+  
+    
 }
 
 @media (min-width:961px) and (max-width:1200px) {
@@ -155,6 +189,10 @@
 
     .testimonial_stars {
         padding: 0;
+    }
+
+    .starandh4{
+        gap: 0;
     }
 
     .testimaonial_review {
