--- a/src/Components/Home/Motivation/motivation.css
+++ b/src/Components/Home/Motivation/motivation.css
@@ -29,8 +29,17 @@
     font-size: 30px;
 }
 
-@media (min-width:320px) and (max-width:481px) {
+@media (min-width:320px) and (max-width:491px) {
     .motivation {
         padding-bottom: 0rem;
+    }
+
+    .motivation__video {
+        width: 100%;
+        height: 70vh;
+      
+    
+       
+    
     }
 }
