--- a/src/Components/Home/Problemstatement/problemstatement.css
+++ b/src/Components/Home/Problemstatement/problemstatement.css
@@ -69,7 +69,7 @@
     }
 
         #heading2{
-            padding: 10px 15px;
+            /* padding: 10px 15px; */
             font-size: 18px;
        
         }
