--- a/src/Components/Home/Motivation/motivation.css
+++ b/src/Components/Home/Motivation/motivation.css
@@ -37,9 +37,12 @@
     .motivation__video {
         width: 100%;
         height: 40vh;
-      
     
-       
     
+    }
+
+    .motivation__cursor{
+        width: 44px;
+        height: 43px;
     }
 }
